--- a/src/component/animationCompetences/cardCompetenceStyle.css
+++ b/src/component/animationCompetences/cardCompetenceStyle.css
@@ -1,19 +1,17 @@
 #listTechno {
-  /* background-color: rgba(0, 123, 181, 0.776); */
   backdrop-filter: blur(5px) saturate(98%);
   -webkit-backdrop-filter: blur(5px) saturate(98%);
   background-color: rgba(17, 25, 40, 0.33);
-  border-radius: 12px;
-  border: 2px solid rgba(255, 255, 255, 0.125);
+  border: 3px solid rgba(255, 255, 255, 0.65);
+  border-radius: 30px;
 }
 #listTechnoFront {
   height: 610px;
-  /* background-color: #05648f56; */
   backdrop-filter: blur(5px) saturate(98%);
   -webkit-backdrop-filter: blur(5px) saturate(98%);
   background-color: rgba(17, 25, 40, 0.33);
-  border-radius: 12px;
-  border: 8px solid rgb(255, 255, 255);
+  border: 3px solid rgba(255, 255, 255, 0.65);
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,16 +23,5 @@
 }
 
 .containerFlipp {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  justify-content: center;
   position: relative;
-  width: 300%;
-  left: -100%;
-}
-
-.flippDiv {
-  cursor: pointer;
-  position: absolute;
 }
